# University

./: README.md
First/: d.md
First/LA1/: CMakeLists.txt  arrays.c  arrays.h  converter.c  converter.h  functions.c  functions.h  la1  logic.c  logic.h  main.c  math_operations.c  math_operations.h  mystring.c  mystring.h  parse_Array.c  parse_Array.h  parse_String.c  parse_String.h  parser.c  parser.h  stack.c  stack.h
First/PF/: pf.md
First/PF/50/: 50questoes.hs
First/PF/Fichas/: pf_f1.hs  pf_f2.hs  pf_f3.hs  pf_f4.hs  pf_f5.hs  pf_f6.hs  pf_f7.hs  pf_f8.hs  pf_f9.hs
First/PF/Testes/: exame_18_19.hs  recurso.hs  teste1617.hs  teste18_19.hs  teste20_21.hs  teste21.hs
First/PI/: pi.md
First/PI/100/: 100 questoes  newcem.c  old100.c
First/PI/Fichas/: ficha1.c  ficha2.c  ficha3.c
Master In Mathematics and Computing/Projeto Integrado/: rd.txt
Master In Mathematics and Computing/TC/: index.html  package-lock.json  package.json  postcss.config.cjs  rd.txt  tailwind.config.ts  theme.ts  tsconfig.json  tsconfig.node.json  vite.config.mts
Master In Mathematics and Computing/TC/public/font/: Aeonik.css
Master In Mathematics and Computing/TC/src/: App.vue  components.d.ts  main.ts  types.d.ts
Master In Mathematics and Computing/TC/src/assets/css/: main.scss  settings.scss
Master In Mathematics and Computing/TC/src/components/: ConfirmDelete.vue  GoogleMap.vue  PromptInstall.vue  PromptUpdate.vue  WelcomeToAgrovilaDialog.vue  components.d.ts  ioAlert.vue  ioAutocomplete.vue  ioImg.vue
Master In Mathematics and Computing/TC/src/composables/: date.ts  rules.ts  useAlert.ts  useError.ts  useGeoLocation.ts  useGeometry.ts  useLoader.ts  useMedia.ts  useOptions.ts  useUpload.ts
Master In Mathematics and Computing/TC/src/plugins/: axios.ts  index.ts  vuetify.ts  yup.ts
Master In Mathematics and Computing/TC/src/router/: index.ts
Master In Mathematics and Computing/TC/src/store/: app.ts  banner.ts
Master In Mathematics and Computing/TC/src/views/: Home.vue
Master In Mathematics and Computing/TC/src/views/AssimetricCriptography/: AssimetricCriptography.vue  McElieceCriptossystem.vue  RSACriptography.vue
Master In Mathematics and Computing/TC/src/views/Homepage/: Homepage.vue
Master In Mathematics and Computing/TC/src/views/Layout/: Sidebar.vue
Master In Mathematics and Computing/TC/src/views/PointOfView/: PointOfView.vue
Master In Mathematics and Computing/TC/src/views/SimetricCriptography/: AESCriptography.vue  CesarCriptography.vue  SimetricCriptography.vue
Second/: d.md
Second/POO/: Main.java  SmartBulb.java  SmartCamera.java  poo.md
Second/SO/: so
Second/SO/src/: monitor.c  monitor.h  tracer.c  tracer.h
Second/SO/tmp/: ficheiro.txt
Third/: d.md
Third/BD/: bd
Third/BD/Last Project/: rd.txt
Third/BD/TP/: ApFinalBD.pptx  Plano de trabalho defenitivo .xlsx  Relatorio_do_Trabalho.doc
Third/BD/TP/Brmodelo conteito/: Conceitual_1.brM3
Third/BD/TP/Modelo Logico/: Entregas.mwb  Entregas.mwb.bak
Third/BD/TP/Requesitos/: LevantamentoRequisitos.xlsx
Third/BD/TP/SQL/: CreateDB.sql  Populate.sql  Queries.sql  Triggers.sql  createStoredProcedures.sql  views.sql
Third/CG/: cg
Third/CG/Fase1/: gen_eng_pipeline.sh
Third/CG/Fase1/Engine/: CMakeCache.txt  CMakeLists.txt  engine.cpp  engine.hpp
Third/CG/Fase1/Generator/: CMakeLists.txt  Generator.vcxproj  Generator.vcxproj.filters  box.3d  box.hpp  box.txt  generator  generator.cpp  generator.h  geometry.hpp  plane.cpp  plane.hpp  plane.txt  sphere.txt
Third/CG/Fase1/data/: plane_2_3.3d  sphere_1_10_10.3d  test_1_1.xml  test_1_5.xml
Third/CG/Fase2/: relatorio.tex
Third/CG/Fase2/Engine/: CMakeLists.txt
Third/CG/Fase2/Engine/include/: Group.hpp  Model.hpp  Transform.hpp  World.hpp  XMLParser.hpp  point.hpp
Third/CG/Fase2/Engine/src/: camera.cpp  group.cpp  main.cpp  model.cpp  point.cpp  transform.cpp  world.cpp  xmlParser.cpp
Third/CG/Fase2/Generator/: box.cpp  cone.hpp  generator.cpp  generator.h  sphere.cpp
Third/CG/Fase2/data/: cone.3d  sistemasolar.xml  solarsystem.xml  test_2_2.xml  test_2_3.xml
Third/CG/Fase3/Engine/: CMakeLists.txt
Third/CG/Fase3/Engine/include/: Curva_CATMR_H.hpp  camera.hpp  group.hpp  model.hpp  point.hpp  transform.hpp  world.hpp  xmlParser.hpp
Third/CG/Fase3/Engine/src/: Curva_CATMR_H.cpp  camera.cpp  group.cpp  main.cpp  model.cpp  point.cpp  transform.cpp  world.cpp  xmlParser.cpp
Third/CG/Fase3/Generator/: CMakeLists.txt  bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  generator.cpp  generator.h  plane.cpp  plane.hpp  sphere.hpp
Third/CG/Fase3/data/: bezier_10.3d  box_2_3.3d  sisSol.xml  sphere_1_8_8.3d  test_3_2.xml
Third/IC/: ic
Third/IC/TP - CQ/: Untitled.ipynb  grover.ipynb
Third/PC/: pc
Third/PC/Client/: interface  jogador.pde  main.pde  menu.pde
Third/PC/Server/: client.java  jogo.beam  jogo.erl  servidor.beam  servidor.erl  users.beam  users.erl
Third/PL/: pl
Third/PL/TP1/: alunos.csv  alunos2.csv  alunos3.csv  alunosconver.json  tp1_ex5.py
Third/PL/TP2/: PLC_TP2.txt  language.py  parser.out  parsetab.py  toks_file.py
Third/PL/TP2/testes/: array.txt  array.vm  erros.txt  exemplo.txt  exemplo.vm  exemplo2.txt  exemplo2.vm  matriz.txt  matriz.vm  teste.txt  teste.vm
Third/PROJETO/: projeto
Third/PROJETO/Proj/: app.py  data.py  main.py  novoIds.py  novoPost.py
Third/PROJETO/Proj/static/: w3.css
Third/PROJETO/Proj/templates/: acordao.html  acordaos.html  autores.html  homepage.html  informações.html
